S11P12D210-246 Feat : 실시간 강의 예약화면 View구성

--- a/app/src/main/res/layout/fragment_teacher_reservation.xml
+++ b/app/src/main/res/layout/fragment_teacher_reservation.xml
@@ -14,29 +14,25 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_profile"
-            android:layout_width="84dp"
-            android:layout_height="84dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:background="@color/gray_20"
             android:scaleType="centerCrop"
-            app:layout_constraintBottom_toTopOf="@id/tv_select_term"
-            app:layout_constraintEnd_toStartOf="@id/tv_teacher_nickname"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:shapeAppearanceOverlay="@style/Circle" />
 
         <TextView
             android:id="@+id/tv_teacher_nickname"
-            style="@style/SingleLineText"
+            style="@style/LargeText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/padding_large"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/tv_hashtag"
+            app:layout_constraintBottom_toTopOf="@+id/tv_hashtag"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_profile"
-            app:layout_constraintTop_toTopOf="@id/iv_profile"
-            app:layout_constraintVertical_chainStyle="spread"
+            app:layout_constraintStart_toEndOf="@id/iv_profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
             tools:text="요구르드" />
 
         <TextView
@@ -44,59 +40,37 @@
             style="@style/SingleLineText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
-            app:layout_constraintEnd_toEndOf="@id/tv_teacher_nickname"
-            app:layout_constraintStart_toStartOf="@id/tv_teacher_nickname"
-            app:layout_constraintTop_toBottomOf="@id/tv_teacher_nickname"
+            android:layout_marginHorizontal="@dimen/padding_large"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_profile"
+            app:layout_constraintTop_toBottomOf="@+id/tv_teacher_nickname"
+            tools:layout_editor_absoluteX="104dp"
             tools:text="#힐링 요가 #요가 마스터 #유연성" />
 
         <TextView
-            android:id="@+id/tv_select_term"
-            style="@style/BoldMediumText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding_small"
-            android:gravity="center"
-            android:text="@string/select_term"
-            app:layout_constraintBottom_toTopOf="@id/calendar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_profile" />
-
-        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-            android:id="@+id/calendar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/tv_select_class_method"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_select_term"
-            app:mcv_firstDayOfWeek="sunday"
-            app:mcv_selectionColor="@color/primary"
-            app:mcv_selectionMode="range" />
-
-        <TextView
             android:id="@+id/tv_select_class_method"
-            style="@style/BoldMediumText"
+            style="@style/BoldSemiMediumText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding_small"
+            android:layout_marginTop="@dimen/padding_extra_large"
             android:gravity="center"
             android:text="@string/class_method"
-            app:layout_constraintBottom_toTopOf="@id/rg_class"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/calendar" />
+            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
+            tools:layout_editor_absoluteX="0dp" />
 
         <RadioGroup
             android:id="@+id/rg_class"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_small"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toTopOf="@id/tv_available_class"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_select_class_method">
+            app:layout_constraintTop_toBottomOf="@+id/tv_select_class_method"
+            tools:layout_editor_absoluteX="0dp">
 
             <Space
                 android:layout_width="0dp"
@@ -135,29 +109,76 @@
 
         <TextView
             android:id="@+id/tv_available_class"
-            style="@style/BoldMediumText"
+            style="@style/BoldSemiMediumText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_extra_large"
+            android:gravity="center"
+            android:text="@string/available_class"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rg_class"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ly_rv_available_class"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/padding_small"
-            android:gravity="center"
-            android:text="@string/available_class"
-            app:layout_constraintBottom_toTopOf="@id/rv_available_class"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rg_class" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_available_class">
 
-        <!-- TODO 여러개 선택 가능하므로 adapter에서 단일 선택 기능 구현하세요. -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_available_class"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/list_item_available_class"
+                tools:visibility="gone" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_available_class"
+            <TextView
+                android:id="@+id/tv_noting"
+                style="@style/commonText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="수강 가능한 수업이 없습니다."
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <TextView
+            android:id="@+id/tv_select_term"
+            style="@style/BoldSemiMediumText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginVertical="@dimen/padding_extra_large"
+            android:gravity="center"
+            android:text="@string/select_term"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_available_class"
-            tools:listitem="@layout/list_item_available_class" />
+            app:layout_constraintTop_toBottomOf="@id/ly_rv_available_class" />
+
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/calendar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/padding_small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_select_term"
+            app:mcv_firstDayOfWeek="sunday"
+            app:mcv_selectionColor="@color/primary"
+            app:mcv_selectionMode="range" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
