--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -168,10 +168,19 @@
         android:id="@+id/teacherReservationFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.teacher.teacherReservation.TeacherReservationFragment"
         android:label="fragment_teacher_reservation"
-        tools:layout="@layout/fragment_teacher_reservation" >
+        tools:layout="@layout/fragment_teacher_reservation">
         <argument
             android:name="teacherId"
             app:argType="integer" />
+        <argument
+            android:name="teacherName"
+            app:argType="string" />
+        <argument
+            android:name="hashtags"
+            app:argType="string" />
+        <argument
+            android:name="teacherSmallProfile"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/lectureDetailFragment"
@@ -180,7 +189,7 @@
         tools:layout="@layout/fragment_lecture_detail">
         <action
             android:id="@+id/action_lectureDetailFragment_to_lectureVideoFragment"
-            app:destination="@id/lectureVideoFragment"/>
+            app:destination="@id/lectureVideoFragment" />
         <argument
             android:name="recordedId"
             android:defaultValue="-1L"
