S11P12D210-259 Feat : 실시간 강의 예약 화면 정말 멋진 애니메이션

--- a/app/src/main/res/layout/fragment_teacher_reservation.xml
+++ b/app/src/main/res/layout/fragment_teacher_reservation.xml
@@ -8,50 +8,55 @@
     android:padding="@dimen/padding_medium"
     tools:context=".ui.homeUI.teacher.teacherReservation.TeacherReservationFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_profile"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:background="@color/gray_20"
-            android:scaleType="centerCrop"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/Circle" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:background="@color/gray_20"
+                android:scaleType="centerCrop"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/Circle" />
 
-        <TextView
-            android:id="@+id/tv_teacher_nickname"
-            style="@style/LargeText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_large"
-            app:layout_constraintBottom_toTopOf="@+id/tv_hashtag"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_profile"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="요구르드" />
+            <TextView
+                android:id="@+id/tv_teacher_nickname"
+                style="@style/LargeText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/padding_large"
+                app:layout_constraintBottom_toTopOf="@+id/tv_hashtag"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_profile"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="요구르드" />
 
-        <TextView
-            android:id="@+id/tv_hashtag"
-            style="@style/SingleLineText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/padding_large"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/iv_profile"
-            app:layout_constraintTop_toBottomOf="@+id/tv_teacher_nickname"
-            tools:layout_editor_absoluteX="104dp"
-            tools:text="#힐링 요가 #요가 마스터 #유연성" />
+            <TextView
+                android:id="@+id/tv_hashtag"
+                style="@style/SingleLineText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/padding_large"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/iv_profile"
+                app:layout_constraintTop_toBottomOf="@+id/tv_teacher_nickname"
+                tools:layout_editor_absoluteX="104dp"
+                tools:text="#힐링 요가 #요가 마스터 #유연성" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/tv_select_class_method"
             style="@style/BoldSemiMediumText"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_extra_large"
             android:gravity="center"
@@ -63,7 +68,7 @@
 
         <RadioGroup
             android:id="@+id/rg_class"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_small"
             android:orientation="horizontal"
@@ -110,7 +115,7 @@
         <TextView
             android:id="@+id/tv_available_class"
             style="@style/BoldSemiMediumText"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_extra_large"
             android:gravity="center"
@@ -122,16 +127,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ly_rv_available_class"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding_small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="@dimen/padding_small"
+            android:layout_marginBottom="@dimen/padding_extra_large"
             app:layout_constraintTop_toBottomOf="@+id/tv_available_class">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_available_class"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -144,7 +148,7 @@
             <TextView
                 android:id="@+id/tv_noting"
                 style="@style/commonText"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="수강 가능한 수업이 없습니다."
@@ -159,9 +163,8 @@
         <TextView
             android:id="@+id/tv_select_term"
             style="@style/BoldSemiMediumText"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/padding_extra_large"
             android:gravity="center"
             android:text="@string/select_term"
             app:layout_constraintEnd_toEndOf="parent"
@@ -170,16 +173,13 @@
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
             android:id="@+id/calendar"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/padding_small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_select_term"
             app:mcv_firstDayOfWeek="sunday"
             app:mcv_selectionColor="@color/primary"
             app:mcv_selectionMode="range" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
