S11P12D210-259 Feat : 강의 예약 뷰 api기능구현

--- a/app/src/main/res/layout/list_item_available_class.xml
+++ b/app/src/main/res/layout/list_item_available_class.xml
@@ -9,9 +9,11 @@
     android:layout_marginVertical="3dp"
     app:cardCornerRadius="12dp"
     app:strokeColor="@color/gray_10"
+    android:backgroundTint="@color/white"
     app:strokeWidth="1dp">
 
     <RadioButton
+        android:id="@+id/rv_available_class"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
