--- a/app/src/main/res/layout/fragment_teacher_reservation.xml
+++ b/app/src/main/res/layout/fragment_teacher_reservation.xml
@@ -87,6 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/padding_medium"
+                android:layout_marginBottom="1dp"
                 android:layout_weight="2"
                 android:background="@drawable/custom_radio_selector"
                 android:button="@android:color/transparent"
