S11P12D210-266 Feat: 비어있는 List는 check해서 main Acitivity에 있는 엠티 뷰를 보여지게 구현

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,6 +78,12 @@
         app:layout_constraintTop_toBottomOf="@id/divider"
         app:navGraph="@navigation/navigation" />
 
+
+    <include
+        android:id="@+id/cl_empty"
+        layout="@layout/fragment_empty"
+        android:visibility="invisible" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv"
         style="@style/BottomNavigationViewNoRipple"
