S11P12D210-272 Feata: 이미지 업로드까지 대기시간

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="gray_30">#808080</color>
     <color name="light_green">#F8FEFA</color>
     <color name="bottomnav">#fef0f7</color>
+    <color name="clearWhite">#80FFFFFF</color>
 </resources>
