--- a/app/src/main/res/layout/fragment_teacher_list.xml
+++ b/app/src/main/res/layout/fragment_teacher_list.xml
@@ -25,43 +25,28 @@
     <RadioGroup
         android:id="@+id/rg_align"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/padding_medium"
+        android:gravity="start"
         android:orientation="horizontal"
-        android:paddingStart="@dimen/padding_medium"
-        app:layout_constraintBottom_toTopOf="@+id/rv_teacher_list"
-        app:layout_constraintEnd_toStartOf="@id/ly_filter"
+        app:layout_constraintBottom_toTopOf="@id/rv_teacher_list"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sv_search">
+        app:layout_constraintTop_toBottomOf="@id/sv_search">
 
+        <RadioButton
+            android:id="@+id/rb_popular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/padding_medium"
+            android:text="@string/popular" />
 
         <RadioButton
             android:id="@+id/rb_recent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:gravity="center"
-            android:paddingHorizontal="@dimen/padding_medium"
-            android:text="@string/recent"
-            android:textSize="@dimen/text_medium_large"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rb_popular"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <RadioButton
-            android:id="@+id/rb_popular"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingHorizontal="@dimen/padding_medium"
-            android:text="@string/popular"
-            android:textSize="@dimen/text_medium_large"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/rb_recent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:text="@string/recent" />
 
     </RadioGroup>
 
