--- a/app/src/main/res/layout/custom_chapter_view.xml
+++ b/app/src/main/res/layout/custom_chapter_view.xml
@@ -11,23 +11,10 @@
         android:padding="@dimen/padding_medium"
         android:text="Chapter"
         android:textSize="@dimen/text_size_semi_large"
-        app:layout_constraintBottom_toTopOf="@id/cl_video"
+        app:layout_constraintBottom_toTopOf="@id/iv_video"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_registerBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/padding_small"
-        android:background="@android:color/transparent"
-        android:padding="@dimen/text_medium"
-        android:text="@string/register"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_chapter"
-        app:layout_constraintEnd_toStartOf="@id/tv_deleteBtn"
-        app:layout_constraintTop_toTopOf="@id/tv_chapter" />
 
     <TextView
         android:id="@+id/tv_deleteBtn"
@@ -42,53 +29,36 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_chapter" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_video"
+    <ImageView
+        android:id="@+id/iv_video"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/gray_10"
         app:layout_constraintBottom_toTopOf="@id/et_title"
-        app:layout_constraintDimensionRatio="16:9"
+        app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_chapter">
+        app:layout_constraintTop_toBottomOf="@id/tv_chapter" />
 
-        <androidx.media3.ui.PlayerView
-            android:id="@+id/pv_video"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_add_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/click_video_info"
+        android:textSize="@dimen/text_medium"
+        app:drawableTopCompat="@drawable/video"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_video"
+        app:layout_constraintEnd_toEndOf="@id/iv_video"
+        app:layout_constraintStart_toStartOf="@id/iv_video"
+        app:layout_constraintTop_toTopOf="@id/iv_video" />
 
-        <View
-            android:id="@+id/grayView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/gray_10"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_add_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/click_video_info"
-            android:textSize="@dimen/text_medium"
-            app:drawableTopCompat="@drawable/video"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/et_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:background="@null"
         android:hint="@string/small_title_info"
         android:inputType="text"
@@ -97,7 +67,7 @@
         app:layout_constraintBottom_toTopOf="@id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_video" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_video" />
 
     <View
         android:id="@+id/divider"
@@ -113,10 +83,12 @@
         android:id="@+id/et_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:autofillHints=""
         android:background="@null"
         android:gravity="top"
         android:hint="@string/chapter_info"
         android:inputType="textMultiLine"
+        android:minLines="3"
         android:padding="@dimen/padding_medium"
         android:textSize="@dimen/text_medium"
         app:layout_constraintBottom_toTopOf="@id/divider2"
