S11P12D210-283 Feat: empty 뷰 구현. 값이 들어있지 않을 때 처리

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,4 +110,9 @@
     <style name="DialogButtonStyled" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="GoButtonStyle" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/primary</item>
+    </style>
 </resources>
