--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -76,6 +76,18 @@
         <item name="boxCornerRadiusTopStart">@dimen/padding_extra_large</item>
     </style>
 
+    <style name="boxCornerMultiLengthRadiusStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/ti_multi_height</item>
+        <item name="android:layout_marginStart">@dimen/padding_extra_extra_large</item>
+        <item name="android:layout_marginEnd">@dimen/padding_extra_extra_large</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/padding_extra_large</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/padding_extra_large</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/padding_extra_large</item>
+        <item name="boxCornerRadiusTopStart">@dimen/padding_extra_large</item>
+    </style>
+
+
     <style name="profile">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
