S11P12D210-244 Feat : 강사 소개(content) 입력부 추가 및 입력 완료 정렬

--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -142,13 +142,13 @@
                 android:id="@+id/tie_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
                 android:lines="3"
-                android:maxLines="3"
                 android:maxLength="50"
-                android:scrollbars="vertical"
+                android:maxLines="3"
                 android:overScrollMode="always"
-                android:imeOptions="actionDone" />
+                android:scrollbars="vertical" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
