S11P12D210-181 feat: 화면 풀스크린으로 완성

--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -25,9 +25,10 @@
         app:layout_constraintTop_toTopOf="parent" />
     <FrameLayout
         android:id="@+id/draggable_container"
-        android:layout_width="150dp"
-        android:layout_height="200dp"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
         android:background="@color/gray_20"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <io.getstream.webrtc.android.ui.VideoTextureViewRenderer
