--- a/app/src/main/res/layout/fragment_modify.xml
+++ b/app/src/main/res/layout/fragment_modify.xml
@@ -18,7 +18,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/padding_extra_large"
             android:scaleType="centerCrop"
-            android:src="@drawable/user"
+            android:src="@drawable/profilenull"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
