S11P12D210-312 Refactor: 좋아요한 강사 네비게이션 에러 해결

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -217,7 +217,16 @@
         android:id="@+id/likeTeacherFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.myPage.likeTeacher.LikeTeacherFragment"
         android:label="fragment_like_teacher"
-        tools:layout="@layout/fragment_like_teacher" />
+        tools:layout="@layout/fragment_like_teacher">
+
+        <action
+            android:id="@+id/action_likeTeacherFragment_to_teacherDetailFragment"
+            app:destination="@id/teacherDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
     <fragment
         android:id="@+id/likeLectureFragment"
         android:name="com.ssafy.yoganavi.ui.homeUI.myPage.likeLecture.LikeLectureFragment"
