S11P12D210-181 feat: 집가서 할 커밋

--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -15,19 +15,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <Button
         android:id="@+id/tv_state"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="impossible"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <FrameLayout
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/draggable_container"
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:background="@color/gray_20"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -35,7 +39,7 @@
             android:id="@+id/localVideoCallScreen"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </FrameLayout>
+    </com.google.android.material.card.MaterialCardView>
 
 
     <ImageButton
