--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -127,4 +127,12 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:backgroundTint">@color/primary</item>
     </style>
+
+    <style name="BorderedText" parent="@style/commonText">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:shadowColor">#000000</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+    </style>
 </resources>
