--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="light_green">#F8FEFA</color>
     <color name="bottomnav">#fef0f7</color>
     <color name="clearWhite">#80FFFFFF</color>
+    <color name="red">#F61818</color>
 </resources>
