--- a/app/src/main/res/layout/list_item_home.xml
+++ b/app/src/main/res/layout/list_item_home.xml
@@ -53,13 +53,23 @@
         app:layout_constraintStart_toStartOf="@id/iv_profile"
         app:layout_constraintTop_toBottomOf="@id/iv_profile" />
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/on_air"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:background="@color/gray_20"
+        android:layout_marginEnd="@dimen/padding_small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/Circle" />
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="12dp"
         app:cardElevation="0dp"
-        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,8 +108,8 @@
                 android:layout_width="@dimen/padding_extra_extra_large"
                 android:layout_height="@dimen/padding_extra_extra_large"
                 android:background="@android:color/transparent"
-                android:src="@drawable/baseline_arrow_forward_24"
                 android:clickable="false"
+                android:src="@drawable/baseline_arrow_forward_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
