--- a/app/src/main/res/layout/list_item_lecture_header.xml
+++ b/app/src/main/res/layout/list_item_lecture_header.xml
@@ -6,6 +6,16 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/padding_medium">
 
+    <TextView
+        android:id="@+id/tv_nickname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/iv_lecture_picture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="여긴 닉네임이 들어갑니다." />
+
     <ImageView
         android:id="@+id/iv_lecture_picture"
         android:layout_width="0dp"
@@ -16,7 +26,7 @@
         app:layout_constraintDimensionRatio="4:3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
 
     <TextView
         android:id="@+id/title"
@@ -34,8 +44,8 @@
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_medium"
         android:paddingStart="@dimen/padding_medium"
+        android:textSize="@dimen/text_medium"
         app:layout_constraintBottom_toTopOf="@id/dv1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,8 +80,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/padding_medium"
-        app:layout_constraintEnd_toEndOf="parent"
         android:textSize="@dimen/text_medium"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/content"
         tools:ignore="RtlSymmetry"
@@ -92,8 +102,8 @@
         style="@style/BoldLargeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/padding_medium"
         android:paddingStart="@dimen/padding_medium"
+        android:paddingTop="@dimen/padding_medium"
         android:text="@string/chapter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dv2"
